# youtube-analytics-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_dashboard.py  setup.py  streamlit_app.py
analysis/: requirements.txt  tag_effectiveness_analysis.ipynb
config/: show_patterns.yaml
src/youtube_analytics/: auth.py  caption_downloader.py  cli.py  data_storage.py  show_mapper.py  youtube_client.py
