[project]
name = "youtube-analytics-cli"
version = "0.1.0"
description = "CLI tool for gathering YouTube Studio analytics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.108.0",
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "click>=8.1.7",
    "pandas>=2.1.4",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "streamlit>=1.32.0",
    "plotly>=5.19.0",
    "pygwalker>=0.4.0",
]

[project.scripts]
youtube-analytics = "youtube_analytics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_analytics"]

[tool.uv]
package = true
